src/objects/IS2LeadTraj__ISLeadTrajectorySettings__c.object
<CustomObject>
    <fields>
        <fullName>IS2LeadTraj__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IS2LeadTraj__ValueText__c</fullName>
        <label>ValueText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS2LeadTraj__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ISLeadTrajectorySettings</label>
    <nameField>
        <label>ISLeadTrajectorySettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISLeadTrajectorySettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>